Access violation in frames::interpreter_frame_method

XMLWordPrintable

    • jfr
    • b27

      Running kitchensink (applications/kitchensink/Kitchensink.java):

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ffe11e9c7da, pid=33196, tid=28460
      #
      # JRE version: Java(TM) SE Runtime Environment (15.0+23) (fastdebug build 15-ea+23-1092)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+23-1092, mixed mode, tiered, z gc, windows-amd64)
      # Problematic frame:
      # V [jvm.dll+0x4dc7da] frame::interpreter_frame_method+0x4a

      --------------- T H R E A D ---------------

      Current thread (0x000001b61aa89810): JavaThread "ExceptionStressModule" [_thread_in_Java, id=28460, stack(0x000000a331c00000,0x000000a331d00000)]

      Stack: [0x000000a331c00000,0x000000a331d00000], sp=0x000000a331cf9260, free space=996k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0x4dc7da] frame::interpreter_frame_method+0x4a (frame.cpp:329)
      V [jvm.dll+0x65c5f5] JfrStackTrace::record_safe+0x435 (jfrStackTrace.cpp:233)
      V [jvm.dll+0x65e115] JfrStackTraceRepository::record+0x185 (jfrStackTraceRepository.cpp:145)
      V [jvm.dll+0xcadff2] JfrEvent<EventZPageAllocation>::write_event+0x2d2 (jfrEvent.hpp:181)
      V [jvm.dll+0xcac181] ZPageAllocator::alloc_page_common+0x251 (zPageAllocator.cpp:440)
      V [jvm.dll+0xcaba51] ZPageAllocator::alloc_page+0x51 (zPageAllocator.cpp:513)
      V [jvm.dll+0xc9b0c7] ZHeap::alloc_page+0x27 (zHeap.cpp:217)
      V [jvm.dll+0xcaa4c2] ZObjectAllocator::alloc_page+0x62 (zObjectAllocator.cpp:63)
      V [jvm.dll+0xcaa2c4] ZObjectAllocator::alloc_object_in_shared_page+0x74 (zObjectAllocator.cpp:93)
      V [jvm.dll+0xcaa707] ZObjectAllocator::alloc_small_object+0x207 (zObjectAllocator.cpp:186)
      V [jvm.dll+0xcb289f] ZRelocate::relocate_object_inner+0x1bf (zRelocate.cpp:114)
      V [jvm.dll+0xcb26ae] ZRelocate::relocate_object+0x3e (zRelocate.cpp:146)
      V [jvm.dll+0xc8f1a9] ZBarrier::relocate+0x179 (zBarrier.cpp:110)
      V [jvm.dll+0x1942e] AccessInternal::PostRuntimeDispatch<ZBarrierSet::AccessBarrier<1097844,ZBarrierSet>,2,1097844>::oop_access_barrier+0x3e (access.inline.hpp:85)
      V [jvm.dll+0x19203] AbstractInterpreter::layout_activation+0x193 (abstractInterpreter_x86.cpp:117)
      V [jvm.dll+0xc34488] vframeArrayElement::unpack_on_stack+0x408 (vframeArray.cpp:303)
      V [jvm.dll+0xc35394] vframeArray::unpack_to_stack+0x394 (vframeArray.cpp:609)
      V [jvm.dll+0x44b60f] Deoptimization::unpack_frames+0x14f (deoptimization.cpp:670)
      C 0x000001b608282678

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~DeoptimizationBlob

      [error occurred during error reporting (printing Java stack), id 0xc0000005, EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ffe11e9c7da]


      siginfo: EXCEPTION_ACCESS_VIOLATION (0xc0000005), reading address 0x0000000000000000

            Assignee:
            Erik Ă–sterlund
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: