8244920: Access violation in frames::interpreter_frame_method

Reviewed-by: mgronlun, coleenp